--- a/README.html
+++ b/README.html
@@ -359,12 +359,21 @@ initially collected using a Garmin smartwatch (2019-) and prior to that
 the Runkeeper app (2016-2019). The project contains files used to
 process these data and protect location data. Visualization projects
 using these data can be found on Tableau Public:</p>
-<p><a href="https://public.tableau.com/app/profile/datadventures/viz/Shoejourneys/Shoebiographies"><strong>Shoe
-Journeys</strong></a> an interactive dashboard featuring maps and charts
-hosted on Tableau Public</p>
-<p><a href="https://public.tableau.com/app/profile/datadventures/viz/MyRunningJourney/Thebeginningofthejourney"><strong>My
-Running Journey</strong></a> a narrative data exploration hosted on
-Tableau Public - a <em>Quarto version is forthcoming</em></p>
+<div id="shoe-journeys" class="section level5">
+<h5><a href="https://public.tableau.com/app/profile/datadventures/viz/Shoejourneys/Shoebiographies">Shoe
+Journeys</a></h5>
+<ul>
+<li>an interactive dashboard featuring maps and charts hosted on Tableau
+Public</li>
+</ul>
+</div>
+<div id="my-running-journey" class="section level5">
+<h5><a href="https://public.tableau.com/app/profile/datadventures/viz/MyRunningJourney/Thebeginningofthejourney">My
+Running Journey</a></h5>
+<ul>
+<li>a narrative data exploration hosted on Tableau Public - a <em>Quarto
+version is forthcoming</em> <br></li>
+</ul>
 <p>Garmin and Strava archives need only to be downloaded and placed in
 the project Data folder to update the data. Garmin data can take up to
 24 hours following your request and can be obtained by selecting /Export
@@ -415,6 +424,7 @@ users wish to do so.
 activity data. It also cleans the environment.
 </p>
 <hr />
+</div>
 </div>
 
 
