--- a/README.html
+++ b/README.html
@@ -384,45 +384,48 @@ Deletion page</a> without actually deleting the account. It can only be
 downloaded once per week.</p>
 <p>The following scripts are run to accomplish the necessary cleaning,
 transformations, and concealments:</p>
-<p style="margin-left: 20px;">
-<strong>000_Load_Packages.R</strong> loads all packages necessary
-</p>
-<p style="margin-left: 20px;">
-<strong>001_Garmin_Run_Gear_ActivityIDs.R</strong> cleans running shoe
-names and identifies running activities from my early Garmin data,
-particularly for activities between April 2019 and May 2020 when I
-tracked my shoes using Garmin Connect.
-</p>
-<p style="margin-left: 20px;">
-<strong>002_Garmin_Activities_All.R</strong> loads a later era of Garmin
-activity data and appends it to the activity data (no shoe data) from
-above.
-</p>
-<p style="margin-left: 20px;">
-<strong>003_Garmin_Locations.R</strong> munges and cleans location data
-from both eras of Garmin activities
-</p>
-<p style="margin-left: 20px;">
-<strong>004_Non-Garmin_Location_Data.R</strong> obtains activity dates
-from Strava, where my 2016-2019 Runkeeper Data was migrated before
-deletion, and draws from other documentation recorded on Google Sheets
-to supplement missing data
-</p>
-<p style="margin-left: 20px;">
-<strong>005_Location_Fixes.R</strong> loads hidden constants from the R
-environment should users wish to transform locations in order to protect
-privacy
-</p>
-<p style="margin-left: 20px;">
-<strong>006_strava_activity_name_fixes.</strong> removes selected
-personal information from activity names in the Strava activity and
-fields that might contain additional non-public information, should
-users wish to do so.
-</p>
-<p style="margin-left: 20px;">
-<strong>007_output_activity_Data.R</strong> exports gear, location, and
-activity data. It also cleans the environment.
-</p>
+<p>    000_Load_Packages.R</p>
+<ul>
+<li>loads all packages necessary</li>
+</ul>
+<p>    001_Garmin_Run_Gear_ActivityIDs.R</p>
+<ul>
+<li>cleans running shoe names and identifies running activities from my
+early Garmin data, particularly for activities between April 2019 and
+May 2020 when I tracked my shoes using Garmin Connect.</li>
+</ul>
+<p>    002_Garmin_Activities_All.R</p>
+<ul>
+<li>loads a later era of Garmin activity data and appends it to the
+activity data (no shoe data) from above.</li>
+</ul>
+<p>    003_Garmin_Locations.R</p>
+<ul>
+<li>munges and cleans location data from both eras of Garmin
+activities</li>
+</ul>
+<p>    004_Non-Garmin_Location_Data.R</p>
+<ul>
+<li>obtains activity dates from Strava, where my 2016-2019 Runkeeper
+Data was migrated before deletion, and draws from other documentation
+recorded on Google Sheets to supplement missing data</li>
+</ul>
+<p>    005_Location_Fixes.R</p>
+<ul>
+<li>loads hidden constants from the R environment should users wish to
+transform locations in order to protect privacy</li>
+</ul>
+<p>    006_strava_activity_name_fixes.</p>
+<ul>
+<li>removes selected personal information from activity names in the
+Strava activity and fields that might contain additional non-public
+information, should users wish to do so.</li>
+</ul>
+<p>    007_output_activity_Data.R</p>
+<ul>
+<li>exports gear, location, and activity data. It also cleans the
+environment.</li>
+</ul>
 <hr />
 </div>
 </div>
